Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-03-08 (SVN):
    * Minor documentation corrections.
    * rpm spec file: fix license tag as GPLv2. add missing missing pack map
      entity fixes to the packaged files list.

2011-03-03 (SVN):
    * Changed beta version date stamp to 2011-03-03.

2011-03-03 (SVN):
    * rpm spec file: Nasm version 0.98 can not be supported anymore due to
      its inability to handle -I arguments. Bumped minimum required version
      to 0.98.38.

2011-03-03 (SVN):
    * created new directory oslibs to hold os-specific headers and libraries
      and moved the contents of w32stuff directory to it. adjusted all the
      makefiles and the project files accordingly.

2011-03-01 (SVN):
    * model.c, gl_model.c: relaxed searchpath requirements for external ent
      and lit file loading: they are now allowed from the same game directory
      as the map itself as well as from a searchpath with a higher priority.

2011-03-01 (SVN):
    * quakefs.c (FS_LoadPackFile): remove the extra '&' before the array
      variable `info' when passing it to fread() as the buffer.
    * Changed beta version date stamp to 2011-03-01.

2011-02-27 (SVN):
    * quakefs.c (FS_OpenFile): fix bug where the path_id was not being set
      for files from a directory tree and resulting in wrong decisions in
      the callers of FS_FileExists().

2011-02-27 (SVN):
    * Changed beta version date stamp to 2011-02-27.

2011-02-27 (SVN):
    * bgmusic.c: fix an oversight which used to cause a segfault when a midi
      driver is available and the requested music file isn't found.

2011-02-27 (SVN):
    * sys_unix.c, sys_win.c (sys_throttle): add new cvar, default value 0.02.
      (main): sleep 1 ms if the time passed since the last Host_Frame() call
      is less than the value of sys_throttle.
    * sys_dos.c (sys_throttle): add new cvar to the dos version too, but only
      for compatibility. dos version shall not throttle.